Oops, fix Makefile

--- a/example/Makefile
+++ b/example/Makefile
@@ -7,4 +7,4 @@ all:
 	docker build -t jhamrick/oauthenticator-custom .
 
 run: all
-	docker run --net=host -it -p 8000:8000 --env-file=env jhamrick/oauthenticator-custom
+	docker run --net=host -it -p 8000:8000 --env-file=env -v /var/run/docker.sock:/docker.sock jhamrick/oauthenticator-custom
