--- a/example/Makefile
+++ b/example/Makefile
@@ -3,7 +3,7 @@
 all:
 	git pull
 	git submodule update
-	docker build -t jupyter/singleuser ../dockerspawner/singleuser
+	docker build -t jhamrick/singleuser ../singleuser
 	docker build -t jhamrick/oauthenticator-custom .
 
 run: all
