--- a/singleuser/Dockerfile
+++ b/singleuser/Dockerfile
@@ -9,6 +9,19 @@ MAINTAINER IPython Project <ipython-dev@scipy.org>
 ADD https://raw.githubusercontent.com/jupyter/jupyterhub/master/jupyterhub/singleuser.py /usr/local/bin/jupyterhub-singleuser
 RUN chmod 755 /usr/local/bin/jupyterhub-singleuser
 
+# jupyter is our user
+RUN useradd -u 3000 -m -s /bin/bash jupyter
+
+USER jupyter
+ENV HOME /home/jupyter
+ENV SHELL /bin/bash
+ENV USER jupyter
+
+WORKDIR /home/jupyter/
+
+# IPython introductions
+RUN cp -r /srv/ipython/examples /home/jupyter/examples
+
 EXPOSE 8888
 
 ADD singleuser.sh /srv/singleuser/singleuser.sh
