Better handling of singleuser servers

--- a/singleuser/Dockerfile
+++ b/singleuser/Dockerfile
@@ -5,25 +5,18 @@ FROM ipython/scipystack
 
 MAINTAINER IPython Project <ipython-dev@scipy.org>
 
+# add users
+WORKDIR /srv/singleuser
+ADD addusers.sh /srv/singleuser/addusers.sh
+ADD userlist /srv/singleuser/userlist
+RUN ["sh", "/srv/singleuser/addusers.sh"]
+
 # fetch juptyerhub-singleuser entrypoint
 ADD https://raw.githubusercontent.com/jupyter/jupyterhub/master/jupyterhub/singleuser.py /usr/local/bin/jupyterhub-singleuser
 RUN chmod 755 /usr/local/bin/jupyterhub-singleuser
 
-# jupyter is our user -- we assume that there is also a user called "jupyter" on
-# the host system, with an id of 3000
-RUN useradd -u 3000 -m -s /bin/bash jupyter
-
-USER jupyter
-ENV HOME /home/jupyter
-ENV SHELL /bin/bash
-ENV USER jupyter
-
-WORKDIR /home/jupyter/
-
-# IPython introductions
-RUN cp -r /srv/ipython/examples /home/jupyter/examples
-
 EXPOSE 8888
 
 ADD singleuser.sh /srv/singleuser/singleuser.sh
+RUN chmod +rx /srv/singleuser/singleuser.sh
 CMD ["sh", "/srv/singleuser/singleuser.sh"]
