--- a/singleuser/Dockerfile
+++ b/singleuser/Dockerfile
@@ -3,13 +3,10 @@
 
 FROM ipython/scipystack
 
-MAINTAINER IPython Project <ipython-dev@scipy.org>
+MAINTAINER Jessica Hamrick <jhamrick@berkeley.edu>
 
 # add users
 WORKDIR /srv/singleuser
-ADD addusers.sh /srv/singleuser/addusers.sh
-ADD userlist /srv/singleuser/userlist
-RUN ["sh", "/srv/singleuser/addusers.sh"]
 
 # fetch juptyerhub-singleuser entrypoint
 ADD https://raw.githubusercontent.com/jupyter/jupyterhub/master/jupyterhub/singleuser.py /usr/local/bin/jupyterhub-singleuser
@@ -18,5 +15,10 @@ RUN chmod 755 /usr/local/bin/jupyterhub-singleuser
 EXPOSE 8888
 
 ADD singleuser.sh /srv/singleuser/singleuser.sh
-RUN chmod +rx /srv/singleuser/singleuser.sh
+RUN chmod 755 /srv/singleuser/singleuser.sh
+
+ADD adduser.sh /srv/singleuser/adduser.sh
+ONBUILD ADD user /srv/singleuser/user
+ONBUILD RUN ["sh", "/srv/singleuser/adduser.sh"]
+
 CMD ["sh", "/srv/singleuser/singleuser.sh"]
